styles.css
/* ... */
.sections__title {
  font-family: "Poppins";
  font-size: 28px;
  font-weight: 500;
  color: var(--title-color);
  margin-bottom: 24px;
}

@media only screen and (min-width: 768px) {
  .container {
    min-width: 768px;
    max-width: 1353px;
    width: 100%;
  }
  h4 {
    font-size: 22px;
    margin-bottom: 12px;
  }
  .sections__title {
    font-size: 36px;
    margin-bottom: 36px;
  }
  .pretitle {
    font-size: 18px;
    margin-bottom: 12px;
  }
}

@media only screen and (min-width: 1354px) {
  .container {
    min-width: 1354px;
    max-width: 1391px;
    width: 100%;
  }
  .pretitle {
    font-size: 20px;
  }

  h4 {
    font-size: 24px;
    margin-bottom: 19px;
  }
  .sections__title {
    font-size: 48px;
    margin-bottom: 50px;
  }
}

/* HEADER */
.header__wrapper {
  display: flex;
  justify-content: space-between;
  align-items: center;
  padding: 34px 24px 0;
  border-bottom: 1px solid var(--text-color);
  /* margin-bottom: 94px; */
}

.hamburger-menu {
  --x-width: calc(var(--hamburger-height) * 1.41421356237);
  display: flex;
  flex-direction: column;
  gap: 6px;
  width: max-content;
  position: absolute;
  top: 42px;
  right: 8px;
  z-index: 11;
  cursor: pointer;
}

.hamburger-menu::before,
.hamburger-menu::after,
.hamburger-menu input {
  content: "";
  width: 40px;
  height: 5px;
  background-color: var(--text-color);
  border-radius: 99px;
  transform-origin: left center;
  transition: opacity var(--animation-timing), width var(--animation-timing),
    rotate var(--animation-timing), translate var(--animation-timing);
}

.hamburger-menu input {
  appearance: none;
  padding: 0;
  margin: 0;
  outline: none;
  pointer-events: none;
}
.hamburger-menu input:checked {
  opacity: 0;
  width: 0;
}

.hamburger-menu:has(input:checked) {
  position: fixed;
}

/* .unclick {
  display: none;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  background-color: #c4c4c4;
  height: 100%;
  z-index: -1;
  pointer-events: none;
} */

/* .hamburger-menu:has(input:checked) .unclick {
  display: block;
} */

.hamburger-menu:has(input:checked)::before {
  rotate: 45deg;
  width: var(--x-width);
  translate: 0 calc(5px / -2);
}
.hamburger-menu:has(input:checked)::after {
  rotate: -45deg;
  width: var(--x-width);
  translate: 0 calc(5px / 2);
}

.sidebar {
  /* display: none; */
  overflow: hidden;
  transition: translate var(--animation-timing);
  translate: 100%;
  padding: 0.5rem 1rem;
  padding-top: calc(var(--hamburger-height)+ 8px +1rem);
  background-color: var(--accent-color);
  max-width: 10rem;
  min-width: 210px;
  min-height: 100vh;
  position: fixed;
  right: 0;
  top: 0;
  z-index: 10;
}
.hamburger-menu:has(input:checked) + .sidebar {
  /* display: block; */
  translate: 0;
  transition: translate var(--animation-timing);
}

.nav__list {
  display: flex;
  flex-direction: column;
  gap: 24px;
  margin-top: 100px;
}

.nav__link {
  color: var(--title-color);
  font-weight: 600;
  font-size: 16px;
  text-transform: uppercase;
}
.nav__link:hover {
  color: var(--text-color);
}

@media only screen and (min-width: 768px) {
  .header__wrapper {
    position: fixed;
    top: 0;
    width: 100%;
    background-color: var(--white-color);
  }
  .hamburger-menu {
    display: none;
  }
  .sidebar {
    position: static;
    translate: 0;
    width: 100%;
    min-height: 27px;
    min-width: 80%;
    background-color: var(--white-color);
  }
  .nav__list {
    flex-direction: row;
    justify-content: flex-end;
    gap: 24px;
    margin-top: 0;
  }
}

@media only screen and (min-width: 1354px) {
  .nav__list {
    gap: 44px;
  }
}

/* HERO */
.hero {
  display: flex;
  flex-direction: column;
  /* align-items: center; */
  gap: 22px;
  margin: 59px 0;
}

.hero__title {
  color: var(--title-color);
  font-family: "Poppins";
  font-weight: 600;
  font-size: 54px;
  margin-bottom: 16px;
}

.hero__description {
  margin-bottom: 26px;
}

.hero__img {
  min-width: 316px;
  width: 100%;
  margin: 0 auto;
}
.button {
  background-color: var(--button-color);
  color: var(--white-color);
  text-transform: uppercase;
  width: 142px;
  height: 43px;
  font-weight: 700;
  font-size: 18px;
  border: 1px solid var(--button-color);
  border-radius: 20px 0 20px 0;
  cursor: pointer;
  transition: all 0.3s ease-in-out;
}
.button:hover {
  transform: scale(1.05, 1.05);
}

@media only screen and (min-width: 768px) {
  .hero {
    flex-direction: row;
    gap: 34px;
    margin: 159px 0 109px;
    /* margin-top: 159px; */
  }
  .hero__title {
    font-size: 72px;
    margin-bottom: 23px;
  }
  .hero__img {
    min-width: 416px;
    width: 100%;
  }
  .hero__description {
    margin-bottom: 46px;
  }
}

@media only screen and (min-width: 1354px) {
  .hero {
    align-items: center;
    gap: 44px;
    margin: 159px 0;
  }
  .hero__img {
    width: 716px;
    min-width: 716px;
  }
}

/* SERVICES */
.services {
  margin-bottom: 54px;
}

.services__list {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 16px;
}

.services__item {
  display: flex;
  gap: 20px;
  align-items: center;
  justify-content: center;
  min-width: 300px;
  max-width: 450px;
  width: 100%;
  height: 223px;
  box-shadow: 0px 8px 20px 0px rgba(0, 0, 0, 0.14);
  border-radius: 60px 0 60px 0;
  padding: 0 8px;
}

.services__item:nth-of-type(2) {
  background-color: var(--accent-color);
  color: var(--white-color);
}

.item__img {
  width: 40px;
  height: 40px;
}
.item__desc {
  width: 307px;
}

@media only screen and (min-width: 768px) and (max-width: 1353px) {
  .services {
    margin-bottom: 104px;
  }

  .services__list {
    flex-direction: row;
    justify-content: space-between;
  }
  .services__item {
    width: 100%;
    min-width: 225px;
    height: 193px;
    padding: 0 8px;
  }
}

@media only screen and (min-width: 1354px) {
  .services {
    margin-bottom: 204px;
  }
  .services__list {
    flex-direction: row;
    gap: 37px;
  }
  .services__item {
    width: 425px;
    height: 193px;
  }
}
/* ... */

